@@ -40,6 +40,7 @@ Version 2.2.0
     Lily pads were removed from the Alchemy Ingredient list as they are unused
     Experience formula conversion command no longer relies on a file to determine what formula you were using previously, instead it determines this from command parameters
     Fixed some tab completion bugs for /mcconvert command
+    Nearby players using super abilities is now sent to your chat instead of the action bar by default
     Increased the default recipe cost for Chimaera Wing from 5 to 40
     Admins will now be notified if a player trips over-fishing exploit detection 3+ times in a row (Locale: "Fishing.OverFishingDetected")
         Note: Admins are players who are an operator or have adminchat permission.
